--- a/src/container/skills.hbs
+++ b/src/container/skills.hbs
@@ -13,7 +13,7 @@
 						<li>
 							{{name}}
 							{{#if point includeZero=true}} ({{point}}) {{/if}}
-							{{#if isTop}} (TOP) {{/if}}
+							{{#if isTop}} (24354646677) {{/if}}
 
 							{{#unless point includeZero=true}} (не вивчаємо) {{/unless}}
 
