--- a/src/container/mac.hbs
+++ b/src/container/mac.hbs
@@ -108,10 +108,10 @@
             <br />
             <br />
             <ul>
-              <h4><span
-                  class='badge rounded-pill text-bg-primary'
-                >Features</span>
-              </h4>
+              {{#if features}}<h4><span
+                    class='badge rounded-pill text-bg-primary'
+                  >Features</span>
+                </h4>{{/if}}
               {{#each features}}
                 <li>{{this}}</li>
               {{/each}}
@@ -119,12 +119,51 @@
           {{/each}}
         {{/with}}
       </div>
+      <hr />
+      <h2>Battery and other components</h2>
       <br />
       <div>
         <h3><span
             class='badge text-bg-primary'
           >Battery</span>
         </h3>
+        {{#with features}}
+          {{#with battery}}
+            <b>Battery type: </b>{{type}}
+            <br />
+            <b>Capacity: </b>{{capacity}}
+            <br />
+            <strong>Battery life is {{life}}</strong>
+          {{/with}}
+          <br />
+          <b>Battery Weight: </b>{{weight}}
+          <br />
+          <br />
+          <div>
+            <h4><span
+                class='badge rounded-pill text-bg-success'
+              >Dimensions</span>
+            </h4>
+            {{#with dimensions}}
+              <b>Height: </b><em>{{height}}</em>
+              <br />
+              <b>Width: </b><em>{{width}}</em>
+              <br />
+              <b>Depth: </b><em>{{depth}}</em>
+            {{/with}}
+          </div>
+          <hr />
+          <div>
+            <h2>{{operating_system}}</h2>
+            <ol>
+              {{#each accessories}}
+                <li>{{name}}</li>
+                <b>Price: </b><em>${{price}}</em>
+              {{/each}}
+            </ol>
+          </div>
+        {{/with}}
+        <hr />
       </div>
     </section>
   </main>
