--- a/src/container/education.hbs
+++ b/src/container/education.hbs
@@ -3,7 +3,7 @@
 		<main>
 			<section>
 				{{> title data="My Educationss" big=true}}
-				<ul>
+				<ul class="ps-5">
 					{{#each education}}
 						<li>
 							{{name}}
@@ -15,7 +15,7 @@
 
 			<section>
 				{{> title data="My Certificates" big=false}}
-				<ul>
+				<ul class="ps-5">
 					{{#each certificates}} 
 						<li>
 							{{name}} ({{id}})
