--- a/src/container/shoporder.hbs
+++ b/src/container/shoporder.hbs
@@ -15,12 +15,12 @@
             <h2>{{header}}</h2>
         </div>
         <div class="row">
-            <div>
+            <div class="col-8">
                 {{#with contacts_data}}
                     <h4>{{title}}</h4>
                     <section class="row pt-2">
                         {{#each buttons}}
-                            <div class="col-3">
+                            <div class="col-5">
                                 <button class="
                                 {{#if isPrimary includeZero=true}} btn btn-warning {{/if}}
                                 {{#if isOutline includeZero=true}} btn btn-outline-warning {{/if}}">{{text}}</button>
@@ -29,14 +29,14 @@
                     </section>
                     <div class="row">
                         {{#with form.input.surname}}
-                            <section class="col-4 m-0 pt-2">
+                            <section class="col-6 m-0 pt-2">
                                 <label class="form-label">{{label}}</label>
                                 <input placeholder="{{placeholder}}" class='form-control' />
                                 <div class="form-text">{{caption}}</div>
                             </section>
                         {{/with}}
                         {{#with form.input.name}}
-                            <section class="col-4 m-0 pt-2">
+                            <section class="col-6 m-0 pt-2">
                                 <label class="form-label">{{label}}</label>
                                 <input placeholder="{{placeholder}}" class='form-control' />
                                 <div class="form-text">{{caption}}</div>
@@ -44,14 +44,14 @@
                         {{/with}}
                         <div class="row">
                             {{#with form.input.phone}}
-                                <section class="col-4 pt-2">
+                                <section class="col-6 pt-2">
                                     <label class="form-label">{{label}}</label>
                                     <input placeholder="{{placeholder}}" class='form-control' />
                                     <div class="form-text">{{caption}}</div>
                                 </section>
                             {{/with}}
                             {{#with form.input.email}}
-                                <section class="col-4 ps-3 pe-0 pt-2">
+                                <section class="col-6 ps-3 pe-0 pt-2">
                                     <label class="form-label">{{label}}</label>
                                     <input placeholder="{{placeholder}}" class='form-control' />
                                     <div class="form-text">{{caption}}</div>
@@ -59,29 +59,72 @@
                             {{/with}}
                         </div>
                     </div>
-                    <hr class="col-8 mt-4">
+                    <hr class="col-12 mt-4">
                     {{#each form.switch}}
                         <div class="form-check form-switch pt-3">
                             <label class="form-check-label">{{text}}</label>
                             <input {{#if isActive includeZero=true}} checked {{/if}} type="checkbox" class="form-check-input">
                         </div>
                     {{/each}}
-                    <hr class="col-8 mt-4">
+                    <hr class="col-12 mt-4">
                 {{/with}}
-            </div>
-            <div class="w-100 d-none d-md-block"></div>
-            <div class="container">
-                <div class="row justify-content-end">
-                    <section class="col-4">
-                        <div class="card">
-                            <div class="card-body">
-                                {{#each action_block}}
-                            
-                                {{/each}}
+                {{#with delivery}}
+                    <h4>{{title}}</h4>
+                    <div class="row">
+                        <div class="col-12">
+                            <div class="card mt-3">
+                                <div class="card-body">
+                                    <div class="col-8">
+                                        {{#each select}}
+                                            <label class="form-label">{{label}}</label>
+                                            <select class="form-select"></select>
+                                        {{/each}}
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </section>
+                    </div>
+                {{/with}}
+            </div>
+            <div class="col-4">
+                <div class="card">
+                    <div class="pt-3 pb-2 px-2">
+                        {{#each action_block}}
+                            <div class="pb-2">
+                                <a href="#"
+                                {{#if isSuccess includeZero=true}} class="btn btn-success" {{/if}}
+                                {{#if isDanger includeZero=true}} class="btn btn-danger" {{/if}}
+                                {{#if isInfo includeZero=true}} class="btn btn-info" {{/if}}>{{text}}</a>
+                            </div>
+                        {{/each}}
+                    </div>
                 </div>
+                {{#with total}}
+                    <div class="card mt-3">
+                        <div class="pt-3 pb-2 px-2">
+                            <h4>{{title}}</h4>
+                            {{#each item_list}}
+                                <p class="mb-1">{{name}}: {{price}}</p>
+                            {{/each}}
+                            <hr class="mb-2 mt-2">
+                            {{#each additional_info}}
+                                <p class="mb-1">{{text}}: {{value}}</p>
+                            {{/each}}
+                            <hr class="mb-2 mt-2">
+                            {{#with total_price}}
+                                <p class="mb-1">{{text}}: {{value}}</p>
+                            {{/with}}
+                            <hr class="mb-2 mt-2">
+                            {{#each button}}
+                                <div class="mb-2">
+                                    <button class="
+                                    {{#if isPrimary includeZero=true}} btn btn-primary {{/if}}
+                                    {{#if isOutline includeZero=true}} btn btn-outline-primary {{/if}}">{{text}}</button>
+                                </div>
+                            {{/each}}
+                        </div>
+                    </div>
+                {{/with}}
             </div>
         </div>
     </div>
