--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -5,29 +5,31 @@
 
 <html>
 
-  <head>
-    <title>
-      {{page.title}}
-    </title>
-    <meta charset='utf-8' />
-    <link href='css/index.css' rel='stylesheet' />
+    <head>
+        <title>
+            {{page.title}}
+        </title>
+        <meta charset='utf-8' />
+        <link href='css/index.css' rel='stylesheet' />
 
-    <link
-      href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css'
-      rel='stylesheet'
-      integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
-      crossorigin='anonymous'
-    />
-  </head>
+        <link
+            href='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css'
+            rel='stylesheet'
+            integrity='sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD'
+            crossorigin='anonymous'
+        />
 
-  <body>
+        <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css' />
+    </head>
 
-    {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
-    {{{body}}}
+    <body>
 
-    <script
-      src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'
-    ></script>
-  </body>
+        {{! ↓ ця кострукція показує куди шаблонізатору треба вставляти код з container файлу }}
+        {{{body}}}
+
+        <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js'></script>
+
+        <script src='https://kit.fontawesome.com/f6c0f1b4f7.js' crossorigin='anonymous'></script>
+    </body>
 
 </html>
