--- a/src/container/bootstrap.hbs
+++ b/src/container/bootstrap.hbs
@@ -1,68 +1,349 @@
 <main>
-  <h1 class='text-center text-uppercase'>Hello World!</h1>
-  <h2 class='text-end text-lowercase'>Second</h2>
-  <h3 class='text-capitalize'>3 title one two</h3>
+    <h1 class='text-center text-uppercase'>Hello World!</h1>
+    <h2 class='text-end text-lowercase'>Second</h2>
+    <h3 class='text-capitalize'>3 title one two</h3>
 
-  <hr />
+    <hr />
 
-  <div class='display-1 text-muted'>Hello World!</div>
-  <div class='display-5'>Second</div>
-  <div class='display-6'>3 title</div>
+    <div class='display-1 text-muted'>Hello World!</div>
+    <div class='display-5'>Second</div>
+    <div class='display-6'>3 title</div>
 
-  <hr />
+    <hr />
 
-  <div class='text-end text-muted'>
-    Додатковий
-    <span class='display-6'>текст</span>
-  </div>
-
-  <hr />
-
-  <div class='card'>
-    <div class='card-body'>
-      <a href='#' class='btn btn-primary'>
-        Button primary
-      </a>
+    <div class='text-end text-muted'>
+        Додатковий
+        <span class='display-6'>текст</span>
     </div>
-  </div>
 
-  <br />
-  <br />
-  <br />
+    <hr />
 
-  <div class='card'>
-    <div class='card-body'>
-      <div class='text-dark'>My text</div>
-      <div>My text</div>
-      <div class='text-muted'>My text</div>
+    <div class='card'>
+        <div class='card-body'>
+            <a href='#' class='btn btn-primary'>
+                Button primary
+            </a>
+        </div>
     </div>
-  </div>
 
-  <br />
-  <br />
-  <br />
+    <br />
+    <br />
+    <br />
 
-  <div class='card'>
-    <div class='card-body'>
-      <button
-        class='btn btn-secondary btn-lg'
-      >Додати</button>
-      <button
-        class='btn btn-outline-secondary'
-      >Редагувати</button>
-      <button
-        class='btn btn-outline-dark btn-sm'
-      >Видалити</button>
+    <div class='card'>
+        <div class='card-body'>
+            <div class='text-dark'>My text</div>
+            <div>My text</div>
+            <div class='text-muted'>My text</div>
+        </div>
     </div>
-  </div>
 
-  <br />
-  <br />
-  <br />
+    <br />
+    <br />
+    <br />
 
-  <div class='card'>
-    <div class='card-body'>
-      This is content
+    <div class='card'>
+        <div class='card-body'>
+            <button class='btn btn-secondary btn-lg'>Додати</button>
+            <button class='btn btn-outline-secondary'>Редагувати</button>
+            <button class='btn btn-outline-dark btn-sm'>Видалити</button>
+        </div>
     </div>
-  </div>
+
+    <br />
+    <br />
+    <br />
+
+    <div class='card'>
+        <div class='card-body'>
+            This is content
+        </div>
+    </div>
+</main>
+
+<br />
+<br />
+<br />
+
+<main>
+    <div class='row gy-5'>
+        <section class='col-12'>
+            <div class='card text-bg-dark'>
+                <img class='card-img-top' src='https://picsum.photos/400/200' alt='Product photo' />
+                <div class='card-body'>
+                    <h5 class='card-title text-bg-primary'>Product #167534</h5>
+                    <p class='text-bg-secondary'>Лікер Jägermeister 0.7 л
+                        <br />
+                        35% (4067700015532)</p>
+                    <a href='/summary' class='btn btn-primary'>Open</a>
+                </div>
+            </div>
+        </section>
+
+        <section class='col-3'>
+            <div class='card'>
+                <div class='card-header'>
+                    <div>Menu</div>
+                </div>
+                <ul class='list-group list-group-flush'>
+                    <li class='list-group-item'>
+                        <a href='#' class='btn btn-link'>Home page</a>
+                    </li>
+                    <li class='list-group-item'>
+                        <a href='#' class='btn btn-link'>Summary page</a>
+                    </li>
+                    <li class='list-group-item'>
+                        <a href='#' class='btn btn-link'>Skills page</a>
+                    </li>
+                </ul>
+
+                <div class='card-footer'>
+                    <button class='btn btn-dark btn-sm'>Update list</button>
+                </div>
+            </div>
+        </section>
+        <section class='col-9'>
+            <table class='table table-bordered'>
+                <thead>
+                    <tr>
+                        <th>
+                            #id
+                        </th>
+                        <th>
+                            name
+                        </th>
+                        <th>
+                            age
+                        </th>
+                    </tr>
+                </thead>
+
+                <tbody>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>2</th>
+                        <td>Ivan</td>
+                        <td>29</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                    <tr>
+                        <th>1</th>
+                        <td>Jhon</td>
+                        <td>35</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
+        <section class='col-12'>
+            <div class='row g-2'>
+                <div class='col-3'>
+                    <div class='card text-bg-success'>
+                        <div class='card-header text-center'>Header</div>
+                        <div class='card-body text-center'>
+                            <h6 class='card-title'>This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class='btn btn-light'>Click!</button>
+                        </div>
+                        <div class='card-footer text-center'>Footer</div>
+                    </div>
+                </div>
+                <div class='col-3'>
+                    <div class='card text-bg-success'>
+                        <div class='card-header text-center'>Header</div>
+                        <div class='card-body text-center'>
+                            <h6 class='card-title'>This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class='btn btn-light'>Click!</button>
+                        </div>
+                        <div class='card-footer text-center'>Footer</div>
+                    </div>
+                </div>
+                <div class='col-3'>
+                    <div class='card text-bg-success'>
+                        <div class='card-header text-center'>Header</div>
+                        <div class='card-body text-center'>
+                            <h6 class='card-title'>This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class='btn btn-light'>Click!</button>
+                        </div>
+                        <div class='card-footer text-center'>Footer</div>
+                    </div>
+                </div>
+                <div class='col-3'>
+                    <div class='card text-bg-success'>
+                        <div class='card-header text-center'>Header</div>
+                        <div class='card-body text-center'>
+                            <h6 class='card-title'>This is title</h6>
+                            <p>This is content of our box</p>
+                            <button class='btn btn-light'>Click!</button>
+                        </div>
+                        <div class='card-footer text-center'>Footer</div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </div>
+</main>
+
+<main class='p-5'>
+    <div class='row'>
+        <div class='col-12 mb-5'>
+            <div class='nav nav-tabs'>
+                <div class='nav-item'>
+                    <a href='#' class='nav-link active'>Main</a>
+                </div>
+                <div class='nav-item'>
+                    <a href='#' class='nav-link disabled'>Catalog</a>
+                </div>
+                <div class='nav-item'>
+                    <a href='#' class='nav-link'>Shop list</a>
+                </div>
+            </div>
+        </div>
+
+        <div class='col-5 pe-5'>
+            <div class='card'>
+                <div class='pt-4 pb-3 px-4'>
+                    <div class='nav flex-column'>
+                        <div class='nav-item mb-2'>
+                            <div class='card'>
+                                <a href='/summary' class='nav-link'>Home page</a>
+                            </div>
+                        </div>
+                        <div class='nav-item mb-2'>
+                            <div class='card'>
+                                <a href='#' class='nav-link disabled'>Bootstrap</a>
+                            </div>
+                        </div>
+                        <div class='nav-item mb-2'>
+                            <div class='card'>
+                                <a href='/skills' class='nav-link'>FAQ page</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class='col-7'>
+            <div class='row'>
+                <div class='col-12'>
+                    <ol class='breadcrumb'>
+                        <li class='breadcrumb-item'>
+                            <a href='#'>Home</a>
+                        </li>
+                        <li class='breadcrumb-item'>
+                            <a href='#'>PC та Ноутбуки</a>
+                        </li>
+                        <li class='breadcrumb-item'>
+                            MacBook
+                        </li>
+                    </ol>
+                </div>
+
+                <div class='col-12'>
+                    <button class='btn btn-primary rounded-pill mb-3'>Click me</button>
+                    <div class='alert alert-dark'>
+                        <h6 class='mb-2'>
+                            Hello world!
+                            <span class='badge text-bg-warning rounded-pill text-uppercase'>Топ продаж</span>
+                        </h6>
+
+                        <p class='m-0'>This is info</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</main>
+
+<main class='p-5'>
+    <div class='row g-5'>
+        <div class='col-12'>
+            <label class='form-label'>Email address</label>
+            <input class='form-control' />
+            <div class='form-text text-danger'>Error. You need to set correct email</div>
+        </div>
+        <div class='col-12'>
+            <div class='row'>
+                <div class='col-2 pt-1'>
+                    <label class='form-label'>Email address</label>
+                </div>
+                <div class='col-6'>
+                    <input class='form-control form-control-sm' />
+                </div>
+                <div class='col-4 ps-5'>
+                    <div class='form-text text-danger'>Error. You need to set correct email</div>
+                </div>
+            </div>
+        </div>
+
+        <div>
+            <hr />
+        </div>
+
+        <div class='col-12'>
+            <label class='form-label'>Select role</label>
+            <select class='form-select form-select-lg'>
+                <option selected>Open list</option>
+                <option value='1'>Admin</option>
+                <option value='2'>User</option>
+            </select>
+            <div class='form-text text-danger'>Error. You need to set correct email</div>
+        </div>
+
+        <div>
+            <hr />
+        </div>
+
+        <div class='col-12'>
+            <div class='form-check form-switch'>
+                <label class='form-check-label'>Get bonus</label>
+                <input name='food' type='checkbox' class='form-check-input' />
+            </div>
+        </div>
+    </div>
+</main>
+
+<main class='p-5'>
+    <h5>
+        Hello!
+        <i class='bi bi-c-circle-fill'></i>
+    </h5>
+
+    <button class='btn btn-warning'>
+        <i class='bi bi-sd-card-fill'></i>
+    </button>
+
+    <div>
+        <img src='/svg/slack.svg' />
+    </div>
 </main>
