--- a/src/layout/bootstrap.hbs
+++ b/src/layout/bootstrap.hbs
@@ -10,6 +10,7 @@
             {{page.title}}
         </title>
         <meta charset='utf-8' />
+        <link href='css/normalize.css' rel='stylesheet' />
         <link href='css/index.css' rel='stylesheet' />
 
         <link
@@ -20,6 +21,12 @@
         />
 
         <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css' />
+
+        <style>
+            h1 { color: green; }
+        </style>
+
+        <link href='css/style.css' rel='stylesheet' />
     </head>
 
     <body>
@@ -31,5 +38,7 @@
 
         <script src='https://kit.fontawesome.com/f6c0f1b4f7.js' crossorigin='anonymous'></script>
     </body>
-
+    <style>
+        h1 { color: green; }
+    </style>
 </html>
